listen for global keypresses since wpilib doesn't support ts in glass

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    
+    // Global keyboard listener for simulation
+    implementation 'com.github.kwhat:jnativehook:2.2.2'
 }
 
 test {
